log/build_2021-10-22_05-06-26/publisher3431/stderr.log
  File "/home/rsa2021/py_pub_sub/install/publisher3431/lib/python3.8/site-packages/publisher3431/subscriber_ass2.py", line 7
    from __future__ import division
    ^
SyntaxError: from __future__ imports must occur at the beginning of the file

